--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -1,27 +1,42 @@
 {{see|俱}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人月山金 (OBUC)}}
+
 # [[all]]
+
 ====References====
-{{Han ref|kx=0109.171|dkj=00724|hdz=10177.021|uh=5036|ud=20534}}
+* {{Han ref|kx=0109.171|dkj=00724|hdz=10177.021|uh=5036|ud=20534}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[く]] (ku)|kun=[[ともに]] (tomoni)}}
+* {{ja-readings|on=[[く]] (ku)|kun=[[ともに]] (tomoni)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倶]]
