--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2022<sub>7</sub>|canj=人卜月尸 (OYBS)}}
+
 # by side of, beside, near, close
+
 ====References====
-{{Han ref|kx=0113.020|dkj=00948|dj=0240.120|hdz=10205.060|uh=508D|ud=20621|bh=B3C4|bd=46020}}
+* {{Han ref|kx=0113.020|dkj=00948|dj=0240.120|hdz=10205.060|uh=508D|ud=20621|bh=B3C4|bd=46020}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=bong6, pong6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=人10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぼう]] (bō), [[ほう]] (hō)|kun=[[かたわら]] (katawara), [[そばに]] ([[傍に]], sobani), [[そう]] (sou)}}
+* {{ja-readings|on=[[ぼう]] (bō), [[ほう]] (hō)|kun=[[かたわら]] (katawara), [[そばに]] ([[傍に]], sobani), [[そう]] (sou)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[방]], [[팽]]|rv=bang, paeng|mr=pang, p'aeng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bàng]] ([[bang4]])|wg=pang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傍]]
