--- a/en/垖/垖.13082.wikitext
+++ b/en/垖/垖.13082.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹口口 (GHRR)}}
+
 # {{defn|Han|sort=土06}}
+
 ====References====
-{{Han ref|kx=0228.020|dkj=05042|dj=0464.010|hdz=10439.180|uh=5796|ud=22422}}
+* {{Han ref|kx=0228.020|dkj=05042|dj=0464.010|hdz=10439.180|uh=5796|ud=22422}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[duī]] ([[dui1]]), [[shǎng]] ([[shang3]])|wg=tui<sup>1</sup>, shang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垖]]
