--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -1,32 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6071<sub>1</sub>|canj=日心心 (APP)|ids=⿱[[日]][[比]]}}
+
 # elder brother
 # [[descendants]]
+
 ====References====
-{{Han ref|kx=0490.390|dkj=13792|dj=0852.090|hdz=21489.090|uh=6606|ud=26118|bh=A9F8|bd=43512}}
+* {{Han ref|kx=0490.390|dkj=13792|dj=0852.090|hdz=21489.090|uh=6606|ud=26118|bh=A9F8|bd=43512}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gwan1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こん]] (kon)|kun=[[あに]] (ani)}}
+* {{ja-readings|on=[[こん]] (kon)|kun=[[あに]] (ani)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[곤]], [[혼]]|eumhun=|rv=gon, hon|mr=kon, hon|y=kon, hon}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kūn]] ([[kun1]])|wg=k'un<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昆]]
