--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -1,8 +1,8 @@
 ==French==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /ʁǝ.pʁe.zɑ̃.tɑ̃/
-*[[w:SAMPA|SAMPA]]: /R@.pRe.zA~.tA~/
+*{{IPA|/ʁǝ.pʁe.zɑ̃.tɑ̃/}}
+*{{SAMPA|/R@.pRe.zA~.tA~/}}
 
 ===Verb===
 #Present participle of ''représenter'' = Representing
