--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,8 +1,8 @@
 ==French==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /ʒø.di/
-*[[w:SAMPA|SAMPA]]: /Z2.di/
+*{{IPA|/ʒø.di/}}
+*{{SAMPA|/Z2.di/}}
 
 ===Noun===
 '''jeudi''' ''m''
