--- a/en/o/observateur.1839.wikitext
+++ b/en/o/observateur.1839.wikitext
@@ -1,7 +1,7 @@
 ==French==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /ɔp.sɛʁ.va.tœʁ/
+*{{IPA|/ɔp.sɛʁ.va.tœʁ/}}
 *[[w:SAMPA|SAMPA]]: /Op.sER.va.t9R/
 
 ===Noun===
