--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -1,28 +1,42 @@
 {{see|儉}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人人一人 (OOMO), X人人一人 (XOOMO)|ids=⿰[[亻]][[㑒]]}}
+
 # temperate, frugal, economical
+
 ====References====
-{{Han ref|kx=0109.171|dkj=00823|dj=0233.040|hdz=10181.011|uh=5039|ud=20537}}
+* {{Han ref|kx=0109.171|dkj=00823|dj=0233.040|hdz=10181.011|uh=5039|ud=20537}}
+
 ----
 
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けん]] (ken)|kun=[[つずまやか]] (tsuzumayaka)}}
+* {{ja-readings|on=[[けん]] (ken)|kun=[[つずまやか]] (tsuzumayaka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=검|rv=geom|mr=kŏm}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiǎn]] ([[jian3]])|wg=chien<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倹]]
