--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>0</sub>|canj=土竹心一 (GHPM), 土竹女戈 (GHVI)}}
+
 # an islet, a rock in a river
 # an embankment
 # to [[stop]]
+
 ====References====
-{{Han ref|kx=0227.050|dkj=05001|dj=0462.220|hdz=10433.100|uh=577B|ud=22395|bh=CBFB|bd=52219}}
+* {{Han ref|kx=0227.050|dkj=05001|dj=0462.220|hdz=10433.100|uh=577B|ud=22395|bh=CBFB|bd=52219}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=dai2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ち]] (chi), [[じ]] (ji), [[し]] (shi), [[てい]] (tei), [[たい]] (tai)|kun=[[なきさ]] (nakisa), [[きざはし]] (kizahashi), [[さか]] (saka), [[には]] (niha), [[とまる]] (tomaru)}}
+* {{ja-readings|on=[[ち]] (chi), [[じ]] (ji), [[し]] (shi), [[てい]] (tei), [[たい]] (tai)|kun=[[なきさ]] (nakisa), [[きざはし]] (kizahashi), [[さか]] (saka), [[には]] (niha), [[とまる]] (tomaru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=지|rv=ji|mr=chi}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chí]] ([[chi2]]), [[dǐ]] ([[di3]])|wg=ch'ih<sup>2</sup>, ti<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坻]]
