--- a/en/偃/偃.11089.wikitext
+++ b/en/偃/偃.11089.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2121<sub>4</sub>|canj=人尸日女 (OSAV)}}
+
 # cease, lay off, lay down
+
 ====References====
-{{Han ref|kx=0109.220|dkj=00830|dj=0233.110|hdz=10187.010|uh=5043|ud=20547|bh=B0B3|bd=45235}}
+* {{Han ref|kx=0109.220|dkj=00830|dj=0233.110|hdz=10187.010|uh=5043|ud=20547|bh=B0B3|bd=45235}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yin2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えん]] (en)|kun=[[ふせる]] (fuseru), [[やすむ]] (yasumu)}}
+* {{ja-readings|on=[[えん]] (en)|kun=[[ふせる]] (fuseru), [[やすむ]] (yasumu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=언|rv=eon|mr=ŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǎn]] ([[yan3]])|wg=yen<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偃]]
