--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -1,36 +1,55 @@
 {{see|値}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2421<sub>6</sub>|canj=人十月一 (OJBM)}}
+
 # [[price]]
+
 ====References====
-{{Han ref|kx=0109.171|hdz=10171.080|uh=503C|ud=20540}}
+* {{Han ref|kx=0109.171|hdz=10171.080|uh=503C|ud=20540}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jik6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ち]] (chi), [[ちょく]] (choku)|kun=[[ね]] (ne), [[あたい]] (atai), [[あう]] (au)}}
+* {{ja-readings|on=[[ち]] (chi), [[ちょく]] (choku)|kun=[[ね]] (ne), [[あたい]] (atai), [[あう]] (au)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=치|rv=chi|mr=ch'i}}
+
 # {{defn|Korean}}
 
 * '''Big5''':
 ** Hex: ADC8
 ** Decimal: 44488
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhí]] ([[zhi2]])|wg=chih<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:值]]
