--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -1,32 +1,51 @@
 {{see|恺}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9201<sub>8</sub>|canj=心山一廿 (PUMT)}}
+
 # enjoy, be contented, joyful
+
 ====References====
-{{Han ref|kx=0396.380|dkj=11015|dj=0735.280|hdz=42337.020|uh=6137|ud=24887|bh=B75F|bd=46943}}
+* {{Han ref|kx=0396.380|dkj=11015|dj=0735.280|hdz=42337.020|uh=6137|ud=24887|bh=B75F|bd=46943}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hoi2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かい]] (kai), [[がい]] (gai)|kun=[[たのしむ]] (tanoshimu)}}
+* {{ja-readings|on=[[かい]] (kai), [[がい]] (gai)|kun=[[たのしむ]] (tanoshimu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=개|eumhun=|rv=gae|mr=kae|y=kay}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=恺|pin=[[kǎi]] ([[kai3]])|wg=k'ai<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愷]]
