--- a/en/愌/愌.15648.wikitext
+++ b/en/愌/愌.15648.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心弓月大 (PNBK)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0394.180|dkj=10918|dj=0730.250|hdz=42330.090|uh=610C|ud=24844}}
+* {{Han ref|kx=0394.180|dkj=10918|dj=0730.250|hdz=42330.090|uh=610C|ud=24844}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かん]] (kan), [[がん]] (gan)|kun=[[はびこる]] (habikoru)}}
+* {{ja-readings|on=[[かん]] (kan), [[がん]] (gan)|kun=[[はびこる]] (habikoru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[huàn]] ([[huan4]])|wg=huan<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愌]]
