--- a/en/惪/惪.15615.wikitext
+++ b/en/惪/惪.15615.wikitext
@@ -1,27 +1,42 @@
 {{see|德}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=十一心 (JMP)}}
+
 # [[ethics]]
+
 ====References====
-{{Han ref|kx=0392.181|hdz=42309.030|uh=60EA|ud=24810}}
+* {{Han ref|kx=0392.181|hdz=42309.030|uh=60EA|ud=24810}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とく]] (toku)|kun=[[とく]] (toku), [[おしえ]] (oshie)}}
+* {{ja-readings|on=[[とく]] (toku)|kun=[[とく]] (toku), [[おしえ]] (oshie)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=덕|eumhun=|rv=deok|mr=tŏk|y=tek}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dé]] ([[de2]])|wg=te<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惪]]
