--- a/en/昶/昶.16991.wikitext
+++ b/en/昶/昶.16991.wikitext
@@ -1,32 +1,51 @@
 {{see|暢}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=3623<sub>0</sub>|canj=戈水日 (IEA)}}
+
 # a long day. bright. extended. clear
+
 ====References====
-{{Han ref|kx=0494.080|dkj=13867|dj=0858.140|hdz=21503.130|uh=6636|ud=26166|bh=CEEB|bd=52971}}
+* {{Han ref|kx=0494.080|dkj=13867|dj=0858.140|hdz=21503.130|uh=6636|ud=26166|bh=CEEB|bd=52971}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chong2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ちょう]] (chō)|kun=[[ながい]] (nagai), [[とおる]] (tooru), [[のびる]] (nobiru)}}
+* {{ja-readings|on=[[ちょう]] (chō)|kun=[[ながい]] (nagai), [[とおる]] (tooru), [[のびる]] (nobiru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=창|eumhun=|rv=chang|mr=ch'ang|y=chang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[chàng]] ([[chang4]])|wg=ch'ang<sup>3</sup>, ch'ang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昶]]
