--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -86,6 +86,18 @@ Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [
 
 ----
 
+==Finnish==
+{{wikipedia|lang=fi}}
+
+===Proper noun===
+{{fi-noun|proper=true}}
+
+# [[#English|Israel]]
+
+[[Category:fi:Countries]]
+
+----
+
 ==Norwegian==
 
 ===Proper noun===
