--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2621<sub>3</sub>|canj=人竹山戈 (OHUI)}}
+
 # great, gigantic
 # puppet
+
 ====References====
-{{Han ref|kx=0112.080|dkj=00928|hdz=10192.080|uh=5080|ud=20608|bh=B3C8|bd=46024}}
+* {{Han ref|kx=0112.080|dkj=00928|hdz=10192.080|uh=5080|ud=20608|bh=B3C8|bd=46024}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=faai3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かい]] (kai)|kun=[[おおきい]] (ookii)}}
+* {{ja-readings|on=[[かい]] (kai)|kun=[[おおきい]] (ookii)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=괴|rv=goe|mr=koe}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[guī]] ([[gui1]])|wg=kuei<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傀]]
