--- a/en/坯/坯.13042.wikitext
+++ b/en/坯/坯.13042.wikitext
@@ -1,33 +1,52 @@
 {{see|壞}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4111<sub>9</sub>|canj=土一火一 (GMFM)}}
+
 # [[dam]], [[embankment]]
 # [[weir]]
+
 ====References====
-{{Han ref|kx=0226.280|dkj=04984|dj=0462.060|hdz=10430.010|uh=576F|ud=22383|bh=CBF2|bd=52210}}
+* {{Han ref|kx=0226.280|dkj=04984|dj=0462.060|hdz=10430.010|uh=576F|ud=22383|bh=CBF2|bd=52210}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=pui1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ひ]] (hi), [[はい]] (hai), [[へ]] (he)|kun=[[おか]] (oka)}}
+* {{ja-readings|on=[[ひ]] (hi), [[はい]] (hai), [[へ]] (he)|kun=[[おか]] (oka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=배|rv=bae|mr=pae}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[pī]] ([[pi1]])|wg=p'i<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坯]]
