--- a/en/偀/偀.11086.wikitext
+++ b/en/偀/偀.11086.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2423<sub>5</sub>|canj=人廿中大 (OTLK)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.190|dkj=00827|hdz=10186.160|uh=5040|ud=20544|bh=D463|bd=54371}}
+* {{Han ref|kx=0109.190|dkj=00827|hdz=10186.160|uh=5040|ud=20544|bh=D463|bd=54371}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ying1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えい]] (ei)|kun=[[はなぶさ]] (hanabusa)}}
+* {{ja-readings|on=[[えい]] (ei)|kun=[[はなぶさ]] (hanabusa)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yīng]] ([[ying1]])|wg=ying<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偀]]
