--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -1,20 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9602<sub>7</sub>|canj=心田中尸 (PWLS)}}
+
 # be in a daze
+
 ====References====
-{{Han ref|kx=0396.071|dkj=10980|hdz=42328.120|uh=6123|ud=24867|bh=B468|bd=46184}}
+* {{Han ref|kx=0396.071|dkj=10980|hdz=42328.120|uh=6123|ud=24867|bh=B468|bd=46184}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ling6}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[léng]] ([[leng2]])|wg=leng<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愣]]
