--- a/en/惷/惷.15714.wikitext
+++ b/en/惷/惷.15714.wikitext
@@ -1,35 +1,54 @@
 {{see|蠢}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=4033<sub>6</sub>|canj=手日心 (QAP)}}
+
 # [[wriggle]]
 # [[stupid]]
 # [[silly]]
 # [[fat]]
+
 ====References====
-{{Han ref|kx=0392.330|dkj=10864|dj=0728.160|hdz=42320.040|uh=60F7|ud=24823|bh=DD65|bd=56677}}
+* {{Han ref|kx=0392.330|dkj=10864|dj=0728.160|hdz=42320.040|uh=60F7|ud=24823|bh=DD65|bd=56677}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=cheun2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゅん]] (shun)|kun=[[みだれる]] (midareru)}}
+* {{ja-readings|on=[[しゅん]] (shun)|kun=[[みだれる]] (midareru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=준|eumhun=|rv=jun|mr=chun|y=cwun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chǔn]] ([[chun3]])|wg=ch'un<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惷]]
