--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -1,8 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'klʌɳ/
+*{{IPA|/'klʌɳ/}}
 *Rhymes: [[Rhymes:English:-ʌŋ|-ʌŋ]]
 
 ===Verb===
