--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -1,35 +1,55 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2524<sub>0</sub>|canj=人弓大手 (ONKQ)}}
+
 # [[strong]], [[robust]], [[healthy]]
 # [[strength]]
+
 ====References====
-{{Han ref|kx=0111.110|dkj=00875|dj=0237.100|hdz=10184.090|uh=5065|ud=20581|bh=B0B7|bd=45239}}
+* {{Han ref|kx=0111.110|dkj=00875|dj=0237.100|hdz=10184.090|uh=5065|ud=20581|bh=B0B7|bd=45239}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gin6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=4|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けん]] (ken)|kun=[[すこやか]] (sukoyaka), [[たけし]] (takeshi), [[したたか]] (shitataka)}}
+* {{ja-readings|on=[[けん]] (ken)|kun=[[すこやか]] (sukoyaka), [[たけし]] (takeshi), [[したたか]] (shitataka)}}
 
 ====Compounds====
 * [[健康]]
 * [[健全]]
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[건]], [[견]]|rv=geon, gyeon|mr=kŏn, kyŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiàn]] ([[jian4]])|wg=chien<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
