--- a/en/傗/傗.11178.wikitext
+++ b/en/傗/傗.11178.wikitext
@@ -1,16 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人卜女田 (OYVW)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0113.190|dkj=00965|dj=0241.090|hdz=10205.080|uh=5097|ud=20631}}
+* {{Han ref|kx=0113.190|dkj=00965|dj=0241.090|hdz=10205.080|uh=5097|ud=20631}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chù]] ([[chu4]]), [[róng]] ([[rong2]])|wg=ch'u<sup>4</sup>, jung<sup>2</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:傗]]
