--- a/en/愲/愲.15685.wikitext
+++ b/en/愲/愲.15685.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9702<sub>7</sub>|canj=心月月月 (PBBB)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.270|dkj=11003|dj=0735.150|hdz=42329.010|uh=6132|ud=24882|bh=DD6B|bd=56683}}
+* {{Han ref|kx=0396.270|dkj=11003|dj=0735.150|hdz=42329.010|uh=6132|ud=24882|bh=DD6B|bd=56683}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gǔ]] ([[gu3]])|wg=ku<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愲]]
