--- a/en/倴/倴.11069.wikitext
+++ b/en/倴/倴.11069.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人大十廿 (OKJT)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.160|dkj=00806|dj=0232.140|hdz=10172.100|uh=5034|ud=20532}}
+* {{Han ref|kx=0109.160|dkj=00806|dj=0232.140|hdz=10172.100|uh=5034|ud=20532}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ほん]] (hon)|kun=}}
+* {{ja-readings|on=[[ほん]] (hon)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=분|rv=bun|mr=pun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bèn]] ([[ben4]])|wg=pen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倴]]
