--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -1,23 +1,34 @@
 {{see|陽}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>7</sub>|canj=日一尸竹 (AMSH)}}
+
 # to open out, to expand
 # [[bright]], [[glorious]]
+
 ====References====
-{{Han ref|kx=0492.170|dkj=13832|dj=0855.170|hdz=21499.070|uh=661C|ud=26140|bh=CEEF|bd=52975}}
+* {{Han ref|kx=0492.170|dkj=13832|dj=0855.170|hdz=21499.070|uh=661C|ud=26140|bh=CEEF|bd=52975}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō)|kun=[[あがる]] (agaru), [[ひかり]] (hikari)}}
+* {{ja-readings|on=[[よう]] (yō)|kun=[[あがる]] (agaru), [[ひかり]] (hikari)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昜]]
