--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -14,7 +14,7 @@
 {{en-adj}}
 
 # possessing charm and attractive.
-#:''Anyone who has ever met Bobbi thought she was absolutely '''Beautiful'''.''
+#:''Anyone who has ever met Courtney Lace thought she was absolutely '''Beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #:''The skater performed a beautiful [[axel]].''
