--- a/en/愭/愭.15680.wikitext
+++ b/en/愭/愭.15680.wikitext
@@ -1,20 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心十心日 (PJPA)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.150|dkj=10989|dj=0735.010|hdz=42335.140|uh=612D|ud=24877}}
+* {{Han ref|kx=0396.150|dkj=10989|dj=0735.010|hdz=42335.140|uh=612D|ud=24877}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=기|eumhun=|rv=gi|mr=ki|y=ki}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qí]] ([[qi2]]), [[xùn]] ([[xun4]])|wg=ch'i<sup>2</sup>, hsün<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愭]]
