--- a/en/圷/圷.12985.wikitext
+++ b/en/圷/圷.12985.wikitext
@@ -1,19 +1,24 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土一卜 (GMY)}}
+
 # {{defn|Han|sort=土03}}
+
 ====References====
-{{Han ref|kx=0224.181|dkj=04900|hdz=10418.061|uh=5737|ud=22327}}
+* {{Han ref|kx=0224.181|dkj=04900|hdz=10418.061|uh=5737|ud=22327}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=|kun=[[あくつ]] (akutsu)}}
-
-
-
+* {{ja-readings|on=|kun=[[あくつ]] (akutsu)}}
 
 [[Category:Japanese-only CJKV Characters|土+03]]
 
