--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -1,27 +1,43 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=1010<sub>4</sub>|canj=一田土 (MWG), X一田土 (XMWG)}}
+
 # to [[restrain]]
 # to dam a stream and change its direction
 # a [[mound]]
+
 ====References====
-{{Han ref|kx=0228.291|dkj=05041|dj=0463.270|hdz=10438.010|uh=5794|ud=22420|bh=CE58|bd=52824}}
+* {{Han ref|kx=0228.291|dkj=05041|dj=0463.270|hdz=10438.010|uh=5794|ud=22420|bh=CE58|bd=52824}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yan1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[おう]] (shyō), [[じゅ]] (ju), [[とう]] (tō), [[ず]] (zu)|kun=[[ふさぐ]] (fusagu)}}
+* {{ja-readings|on=[[おう]] (shyō), [[じゅ]] (ju), [[とう]] (tō), [[ず]] (zu)|kun=[[ふさぐ]] (fusagu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yīn]] ([[yin1]])|wg=yin<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垔]]
