--- a/en/坬/坬.13039.wikitext
+++ b/en/坬/坬.13039.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土竹女人 (GHVO)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0226.250|dkj=04980|hdz=10433.030|uh=576C|ud=22380}}
+* {{Han ref|kx=0226.250|dkj=04980|hdz=10433.030|uh=576C|ud=22380}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=}}
+* {{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[guà]] ([[gua4]])|wg=kua<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坬]]
