--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -1,37 +1,55 @@
 {{see|栗}} (different character in Japan)
 * '''Alternate font''': [[慄]]
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9109<sub>4</sub>|canj=心一田木 (PMWD)}}
+
 # [[shiver]], [[shudder]], [[tremble]]
 # [[tremble]]
+
 ====References====
-{{Han ref|kx=0397.200|dkj=11042|dj=0736.130|hdz=42336.040|uh=6144|ud=24900|bh=B758|bd=46936}}
+* {{Han ref|kx=0397.200|dkj=11042|dj=0736.130|hdz=42336.040|uh=6144|ud=24900|bh=B758|bd=46936}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=leut6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[りつ]] (ritsu)|kun=[[おそれる]] (osoreru), [[おののく]] (ononoku)}}
+* {{ja-readings|on=[[りつ]] (ritsu)|kun=[[おそれる]] (osoreru), [[おののく]] (ononoku)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=률>율|eumhun=|rv=ryul>yul|mr=ryul>yul|y=lyul>yul}}
+
 # {{defn|Korean}}
 
-
 [[Category:CJKV simplified characters which already existed as traditional characters|心栗]]
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=栗|pin=[[lì]] ([[li4]])|wg=li<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慄]]
