--- a/en/愥/愥.15672.wikitext
+++ b/en/愥/愥.15672.wikitext
@@ -1,8 +1,11 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心廿中大 (PTLK)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0396.071|hdz=42326.051|uh=6125|ud=24869}}
+* {{Han ref|kx=0396.071|hdz=42326.051|uh=6125|ud=24869}}
 
 [[fr:愥]]
