--- a/en/傖/傖.11177.wikitext
+++ b/en/傖/傖.11177.wikitext
@@ -1,34 +1,53 @@
 {{see|伧}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2826<sub>7</sub>|canj=人人戈口 (OOIR)}}
+
 # [[vulgar]] person, [[country]] man
 
 <!-- what about [[bumpkin]] or [[hick]]? -->
+
 ====References====
-{{Han ref|kx=0113.180|dkj=00964|dj=0241.080|hdz=10204.020|uh=5096|ud=20630|bh=B3C9|bd=46025}}
+* {{Han ref|kx=0113.180|dkj=00964|dj=0241.080|hdz=10204.020|uh=5096|ud=20630|bh=B3C9|bd=46025}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chaang4, chong1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[しょう]] (shō)|kun=[[いやしい]] (iyashii), [[いやしいもの]] (iyashiimono), [[いなかもの]] (inakamono)}}
+* {{ja-readings|on=[[そう]] (sō), [[しょう]] (shō)|kun=[[いやしい]] (iyashii), [[いやしいもの]] (iyashiimono), [[いなかもの]] (inakamono)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[창]]|rv=chang|mr=ch'ang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=伧|pin=[[cāng]] ([[cang1]])|wg=ts'ang<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傖]]
