--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,17 +1,17 @@
-{{wikipedia|dab=Bridge (disambiguation)|Bridge}}
+[[Image:CH Landwasser 2.jpg|thumb|A bridge (sense 1)]]
 ==English==
 
 ===Pronunciation===
-{{wikipedia}}
+{{wikipedia|dab=Bridge (disambiguation)|Bridge}}
 *{{IPA|/brɪdʒ/}}
 *{{audio|en-us-bridge.ogg|Audio (US)}}
 *{{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
 {{OE.}} ''[[brycġ]]''
 
 ====Noun====
+[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
 {{en-noun}}
 
 # A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
