--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=4210<sub>0</sub>|canj=土中中中 (GLLL)}}
+
 # furrow in field, small drainage
+
 ====References====
-{{Han ref|kx=0224.150|dkj=04894|dj=0458.020|hdz=10420.030|uh=5733|ud=22323|bh=A660|bd=42592}}
+* {{Han ref|kx=0224.150|dkj=04894|dj=0458.020|hdz=10420.030|uh=5733|ud=22323|bh=A660|bd=42592}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jan3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しう]] (shiu), [[しゅ]] (shu), [[しん]] (shin), [[そん]] (son), [[しゅん]] (shun)|kun=[[みぞ]] (mizo)}}
+* {{ja-readings|on=[[しう]] (shiu), [[しゅ]] (shu), [[しん]] (shin), [[そん]] (son), [[しゅん]] (shun)|kun=[[みぞ]] (mizo)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhèn]] ([[zhen4]])|wg=chen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圳]]
