--- a/en/旣/旣.16908.wikitext
+++ b/en/旣/旣.16908.wikitext
@@ -1,28 +1,44 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=71|rad=无|as=07|sn=11|four=|canj=竹心一女山 (HPMVU)}}
+
 # [[already]]
 # de facto
 # [[since]]
 # [[then]]
+
 ====References====
-{{Han ref|kx=0485.300|dkj=13724|dj=0848.060|hdz=21148.050|uh=65E3|ud=26083}}
+* {{Han ref|kx=0485.300|dkj=13724|dj=0848.060|hdz=21148.050|uh=65E3|ud=26083}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=无07}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
+* {{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=기|eumhun=|rv=gi|mr=ki|y=ki}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[xì]] ([[xi4]])|wg=chi<sup>4</sup>, hsi<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旣]]
