--- a/en/愜/愜.15663.wikitext
+++ b/en/愜/愜.15663.wikitext
@@ -1,32 +1,51 @@
 {{see|惬}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9101<sub>3</sub>|canj=心尸大人 (PSKO)}}
+
 # be satisfied, be comfortable
+
 ====References====
-{{Han ref|kx=0395.180|dkj=10949|dj=0733.020|hdz=42325.130|uh=611C|ud=24860|bh=B467|bd=46183}}
+* {{Han ref|kx=0395.180|dkj=10949|dj=0733.020|hdz=42325.130|uh=611C|ud=24860|bh=B467|bd=46183}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hip3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[きょう]] (kyō)|kun=[[こころよい]] (kokoroyoi)}}
+* {{ja-readings|on=[[きょう]] (kyō)|kun=[[こころよい]] (kokoroyoi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=협|eumhun=|rv=hyeop|mr=hyŏp|y=hyep}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=惬|pin=[[qiè]] ([[qie4]])|wg=ch'ieh<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愜]]
