--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -1,26 +1,42 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2122<sub>7</sub>|canj=人尸手火 (OSQF)}}
+
 # to curse, to revile, to abuse
 # to scold
+
 ====References====
-{{Han ref|kx=0113.010|dkj=00947|dj=0240.110|hdz=10200.020|uh=508C|ud=20620|bh=D858|bd=55384}}
+* {{Han ref|kx=0113.010|dkj=00947|dj=0240.110|hdz=10200.020|uh=508C|ud=20620|bh=D858|bd=55384}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ば]] (ba), [[め]] (me)|kun=[[ののしる]] (nonoshiru)}}
+* {{ja-readings|on=[[ば]] (ba), [[め]] (me)|kun=[[ののしる]] (nonoshiru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=마|rv=ma|mr=ma}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mà]] ([[ma4]])|wg=ma<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傌]]
