--- a/en/惼/惼.15632.wikitext
+++ b/en/惼/惼.15632.wikitext
@@ -1,28 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9302<sub>7</sub>|canj=心竹尸月 (PHSB)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0393.080|dkj=10872|dj=0729.060|hdz=42331.110|uh=60FC|ud=24828|bh=D947|bd=55623}}
+* {{Han ref|kx=0393.080|dkj=10872|dj=0729.060|hdz=42331.110|uh=60FC|ud=24828|bh=D947|bd=55623}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[へん]] (hen)|kun=}}
+* {{ja-readings|on=[[へん]] (hen)|kun=}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=편|eumhun=|rv=pyeon|mr=p'yŏn|y=phyen}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[biǎn]] ([[bian3]])|wg=pien<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惼]]
