--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -108,15 +108,16 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * [[Telugu]]: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
 {{trans-bot}}
 
-===Transitive verb===
-{{rfc-trverb|Transitive verb}}
-{{en-verb|curv|ing}}
+===Verb===
+{{en-verb|curv|es}}
 
-# To bend; to crook.
-#: ''to curve a line''
-#: ''to curve a pipe''
-# To cause to swerve from a straight course.
-#: ''to curve a ball in pitching it''
+# {{transitive}} To bend; to crook.
+#: ''to '''curve''' a line''
+#: ''to '''curve''' a pipe''
+# {{transitive}} To cause to swerve from a straight course.
+#: ''to '''curve''' a ball in pitching it''
+# {{intransitive}} To bend or turn gradually from a given direction.
+#: ''the road '''curves''' to the right''
 
 ====Translations====
 
@@ -134,14 +135,6 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 {{trans-bottom}}
 
-====Intransitive verb====
-{{en-verb|curv|ing}}
-
-# {{intransitive}} To bend or turn gradually from a given direction.
-#: ''the road '''curves''' to the right''
-
-====Translations====
-
 {{trans-top|bend or turn gradually from a given direction}}
 * Dutch: [[afbuigen]]
 * Finnish: [[kaartaa]]
@@ -153,7 +146,6 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Russian: [[изгибаться]], [[гнуться]]
 {{trans-bottom}}
 
-=====Translations to be checked=====
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
