--- a/en/愴/愴.15687.wikitext
+++ b/en/愴/愴.15687.wikitext
@@ -1,38 +1,54 @@
 {{see|怆}}
-
 ==Translingual==
+
 ===Etymology===
 [[形声]]。from [[心]], and [[倉]] is sound. The original meaning is [[悲傷]] (sad, miserable)
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9806<sub>7</sub>|canj=心人戈口 (POIR)}}
+
 # [[sad]], [[broken-hearted]], [[disconsolate]]
+
 ====References====
-{{Han ref|kx=0396.320|dkj=11008|dj=0735.200|hdz=42338.050|uh=6134|ud=24884|bh=B75B|bd=46939}}
+* {{Han ref|kx=0396.320|dkj=11008|dj=0735.200|hdz=42338.050|uh=6134|ud=24884|bh=B75B|bd=46939}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chong3}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō)|kun=[[いたむ]] (itamu)}}
+* {{ja-readings|on=[[そう]] (sō)|kun=[[いたむ]] (itamu)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=창|eumhun=|rv=chang|mr=ch'ang|y=chang}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=怆|pin=[[chuàng]] ([[chuang4]])|wg=ch'uang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愴]]
