--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -6,7 +6,7 @@
 # [[feel]], [[perceive]], [[emotion]]
 
 ====References====
-{{Han ref|kx=0395.210|dkj=10953|dj=0733.070|hdz=42321.020|uh=611F|ud=24863|bh=B750|bd=46928}}
+* {{Han ref|kx=0395.210|dkj=10953|dj=0733.070|hdz=42321.020|uh=611F|ud=24863|bh=B750|bd=46928}}
 
 ----
 
@@ -27,46 +27,46 @@
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[かん]] (kan)|kun=[[かんじる]] (kanjiru)}}
+* {{ja-readings|on=[[かん]] (kan)|kun=[[かんじる]] (kanjiru)}}
 
 ===Compounds===
-*[[感温]]
-*[[感化]]
-*[[感懐]]
-*[[感慨]] (かんがい, kangai)
-*[[感慨無量]]
-*[[感覚]]
-*[[感官]]
-*[[感泣]]
-*[[感興]]
-*[[感吟]]
-*[[感激]]
-*[[感光]]
-*[[感謝]]
-*[[感受]]
-*[[感受性]]
-*[[感傷]]
-*[[感賞]]
-*[[感情]]
-*[[感触]]
-*[[感心]]
-*[[感性]]
-*[[感染]]
-*[[感想]]
-*[[感嘆]], [[感歎]]
-*[[感嘆符]]
-*[[感知]]
-*[[感電]]
-*[[感度]]
-*[[感動]]
-*[[感動詞]]
-*[[感得]]
-*[[感応]]
-*[[感服]]
-*[[感奮]]
-*[[感冒]]
-*[[感銘]]
-*[[感涙]]
+* [[感温]]
+* [[感化]]
+* [[感懐]]
+* [[感慨]] (かんがい, kangai)
+* [[感慨無量]]
+* [[感覚]]
+* [[感官]]
+* [[感泣]]
+* [[感興]]
+* [[感吟]]
+* [[感激]]
+* [[感光]]
+* [[感謝]]
+* [[感受]]
+* [[感受性]]
+* [[感傷]]
+* [[感賞]]
+* [[感情]]
+* [[感触]]
+* [[感心]]
+* [[感性]]
+* [[感染]]
+* [[感想]]
+* [[感嘆]], [[感歎]]
+* [[感嘆符]]
+* [[感知]]
+* [[感電]]
+* [[感度]]
+* [[感動]]
+* [[感動詞]]
+* [[感得]]
+* [[感応]]
+* [[感服]]
+* [[感奮]]
+* [[感冒]]
+* [[感銘]]
+* [[感涙]]
 
 ----
 
@@ -87,62 +87,62 @@
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[感触]]
-*[[感戴]]
-*[[感到]]
-*[[感德]]
-*[[感动]]
-*[[感恩]]
-*[[感恩戴德]]
-*[[感恩图报]]
-*[[感奋]]
-*[[感愤]]
-*[[感服]]
-*[[感官]]
-*[[感光]]
-*[[感光片]]
-*[[感光纸]]
-*[[感荷]]
-*[[感化]]
-*[[感怀]]
-*[[感激]]
-*[[感激涕零]]
-*[[感觉]]
-*[[感觉器官]]
-*[[感觉神经]]
-*[[感慨]] (gǎnkài)
-*[[感冒]]
-*[[感念]]
-*[[感泣]]
-*[[感情]]
-*[[感情用事]]
-*[[感染]]
-*[[感染力]]
-*[[感人]]
-*[[感人肺腑]]
-*[[感伤]]
-*[[感伤主义]]
-*[[感生电流]]
-*[[感受]]
-*[[感受器]]
-*[[感叹]]
-*[[感叹词]]
-*[[感叹号]]
-*[[感叹句]]
-*[[感同身受]]
-*[[感悟]]
-*[[感想]]
-*[[感谢]]
-*[[感兴趣]]
-*[[感性]]
-*[[感性认识]]
-*[[感性知识]]
-*[[感言]]
-*[[感应]]
-*[[感应电流]]
-*[[感应线圈]]
-*[[感召]]
-*[[感知]]
+* [[感触]]
+* [[感戴]]
+* [[感到]]
+* [[感德]]
+* [[感动]]
+* [[感恩]]
+* [[感恩戴德]]
+* [[感恩图报]]
+* [[感奋]]
+* [[感愤]]
+* [[感服]]
+* [[感官]]
+* [[感光]]
+* [[感光片]]
+* [[感光纸]]
+* [[感荷]]
+* [[感化]]
+* [[感怀]]
+* [[感激]]
+* [[感激涕零]]
+* [[感觉]]
+* [[感觉器官]]
+* [[感觉神经]]
+* [[感慨]] (gǎnkài)
+* [[感冒]]
+* [[感念]]
+* [[感泣]]
+* [[感情]]
+* [[感情用事]]
+* [[感染]]
+* [[感染力]]
+* [[感人]]
+* [[感人肺腑]]
+* [[感伤]]
+* [[感伤主义]]
+* [[感生电流]]
+* [[感受]]
+* [[感受器]]
+* [[感叹]]
+* [[感叹词]]
+* [[感叹号]]
+* [[感叹句]]
+* [[感同身受]]
+* [[感悟]]
+* [[感想]]
+* [[感谢]]
+* [[感兴趣]]
+* [[感性]]
+* [[感性认识]]
+* [[感性知识]]
+* [[感言]]
+* [[感应]]
+* [[感应电流]]
+* [[感应线圈]]
+* [[感召]]
+* [[感知]]
 
 [[fr:感]]
 [[ko:感]]
