--- a/en/慠/慠.15732.wikitext
+++ b/en/慠/慠.15732.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=|canj=心土尸大 (PGSK), 心手尸大 (PQSK)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0399.080|dkj=11106|dj=0738.250|hdz=42335.090|uh=6160|ud=24928}}
+* {{Han ref|kx=0399.080|dkj=11106|dj=0738.250|hdz=42335.090|uh=6160|ud=24928}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心11}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ごう]] (gō)|kun=[[おごる]] (ogoru), [[うれえる]] (ureeru)}}
+* {{ja-readings|on=[[ごう]] (gō)|kun=[[おごる]] (ogoru), [[うれえる]] (ureeru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=오|eumhun=|rv=o|mr=o|y=o}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ào]] ([[ao4]])|wg=ao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慠]]
