--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -95,6 +95,7 @@ Old English ''[[sūcan]]''
 *'''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
 
 ----
+"Alec sucks" William Barnard and Dylan on WWW.facebook.com where there are related groups to this topic
 
 ==Swedish==
 
